@@ -2,6 +2,9 @@
 - Bugfix: Added the missing path filter to the real path resolver.
 - Bugfix: Use strict encoding detection for strings for more
   reliable results.
+- Bugfix: Fetch traversable data as soon as possible, because we do
+  not want other analysis methods fetch traversable results, that
+  are only fetchable once. DB results are a good example for this.
 
 4.1.5
 - Bugfix: Unnecessary uri encoding in the smoky grey skin prevents
